# nix-haskell-starter

./: .gitignore  README.md  default.nix  docker.nix  nix-haskell-starter.cabal  shell.nix
nix/: nixpkgs.nix  sources.json
test/: Spec.hs
